# simple_wgsl

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  TECHNICAL.md  TUTORIAL.md  fft_stockham_gen.c  fft_stockham_gen.h  glsl_parser.c  llm.md  msl_parser.c  parse_tests.c  ptx_ast.h  ptx_lower.c  ptx_parser.c  ptx_plan.md  simple_wgsl.h  simple_wgsl_internal.h  simplifications.md  spirv_to_ssir.c  spirv_to_ssir.h  ssir.c  ssir.h  ssir_structurize.c  ssir_to_glsl.c  ssir_to_hlsl.c  ssir_to_msl.c  ssir_to_spirv.c  ssir_to_spirv.h  ssir_to_v3d.c  ssir_to_wgsl.c  ssir_to_wgsl.h  stb_image_write.h  wgsl_diagnostics.c  wgsl_lower.c  wgsl_lower.h  wgsl_parser.c  wgsl_parser.h  wgsl_raise.c  wgsl_raise.h  (+3 more)
.github/workflows/: ci.yml
bench/: bench_128_explore.c  bench_2d_matched.c  bench_cufft.cu  bench_cufft_2d.cu  bench_cufft_2d_batched.cu  bench_cufft_2d_events.cu  bench_cufft_3d.cu  bench_cufft_batched.cu  bench_cufft_batched2.cu  bench_cufft_compare.cu  bench_cufft_matched.cu  bench_cuvk  bench_cuvk.c  bench_fft_2d.c  bench_fft_base.c  bench_fft_fused.c  bench_fft_multistage.c  bench_fft_optimal.c  bench_fft_stockham.c  bench_fftw_compare.c  bench_fused_focused.c  bench_ours_batched.c  bench_ours_cufft.c  bench_ours_matched.c  bench_ours_quick.c  bench_plan_time.c  bench_vk_common.h  bench_wp_fft.c  bench_wp_fft2d.c  compare.sh  plot_fft.gp  run_bench.sh  test_cufft_features.cu  test_fft_multistage.c
cmake/: mingw-w64-x86_64.cmake
cuvk_runtime/: CMakeLists.txt  cublas.map  cuda_runtime.h  cuvk_compat.c  cuvk_cublas.c  cuvk_cudart.c  cuvk_cufft.c  cuvk_fatbin.c  cuvk_graph.c  cuvk_init.c  cuvk_internal.h  cuvk_jitlink.c  cuvk_launch.c  cuvk_memory.c  cuvk_module.c  cuvk_stream.c  cuvk_stubs.c
cuvk_runtime/fft/: CMakeLists.txt  cufft.h  cufft.map  cufft_vk.h  cuvk_cufft.c  fft_2d_gen.c  fft_2d_gen.h  fft_bda.h  fft_butterfly.h  fft_fourstep_gen.c  fft_fourstep_gen.h  fft_fused_gen.c  fft_fused_gen.h  fft_optimal_gen.c  fft_optimal_gen.h  fft_stockham_gen.c  fft_stockham_gen.h  fft_strbuf.h
example/: example.c  metal_compute.m  metal_triangle.m  msl_roundtrip.m  test_msl_parse.c
fuzz/: CMakeLists.txt  fuzz_glsl_parse.c  fuzz_msl_parse.c  fuzz_ptx_lower.c  fuzz_ptx_parse.c  fuzz_spirv_to_ssir.c  fuzz_wgsl_parse.c  fuzz_wgsl_roundtrip.c
fuzz/corpus/glsl/: compute.glsl  vertex.glsl
fuzz/corpus/msl/: kernel.msl
fuzz/corpus/ptx/: vadd.ptx
fuzz/corpus/wgsl/: compute.wgsl  types.wgsl  vertex.wgsl
scripts/: coverage.sh
tests/: CMakeLists.txt  all_any_test.cpp  atomic_test.cpp  barrier_test.cpp  bitmanip_test.cpp  cuda_to_vulkan_test.cpp  cufft_test.cpp  cuvk_bda_test.cpp  cuvk_complex_kernel_test.cpp  cuvk_graph_test.cpp  cuvk_init_test.cpp  cuvk_integration_test.cpp  cuvk_launch_test.cpp  cuvk_memory_test.cpp  cuvk_stream_test.cpp  derivative_test.cpp  egl_compute_harness.cpp  egl_compute_harness.h  egl_compute_test.cpp  egl_graphics_test.cpp  expression_test.cpp  faceforward_refract_test.cpp  fft_2d_gen_test.cpp  fma_test.cpp  fourstep_gen_test.cpp  glsl_parser_test.cpp  glsl_raise_test.cpp  glsl_roundtrip_test.cpp  immediate_test.cpp  integration_test.cpp  lower_test.cpp  msl_parser_test.cpp  pack_unpack_test.cpp  parser_test.cpp  ptx_parser_test.cpp  ptx_spirv_dump_test.cpp  ptx_ssir_test.cpp  ptx_texture_test.cpp  raise_test.cpp  resolver_test.cpp  (+25 more)
tests/e2e/: CMakeLists.txt  e2e_common.h  preload_test.c  run_preload_test.sh  test_dot_product.c  test_driver_memcpy.c  test_saxpy.c  test_scale.c  test_vector_add.c
tests/e2e/kernels/: dot_product.cu  saxpy.cu  scale.cu  vector_add.cu
tests/e2e/nvcc/: 01_vector_add.cu  02_device_clamp.cu  03_device_chain.cu  04_saxpy_fma.cu  05_polynomial.cu  06_mandelbrot.cu  07_multi_device_func.cu  08_multi_kernel.cu  09_streams.cu  10_matmul.cu  11_double_underscore_math.cu  12_rsqrt_rcp.cu  13_integer_intrinsics.cu  14_saturate_math.cu  15_double_precision.cu  16_half_float_basic.cu  17_half2_packed.cu  18_fast_trig.cu  19_warp_shuffle.cu  20_shared_memory.cu  21_atomic_ops.cu  22_type_conversions.cu  23_bitwise_ops.cu  24_ternary_select.cu  25_3d_grid.cu  26_float_special.cu  27_prefix_scan.cu  28_long_long_ops.cu  29_grid_stride_loop.cu  30_complex_math.cu  31_popc_brev.cu  32_clz_bfind.cu  33_cvt_rounding.cu  34_funnel_shift.cu  35_standard_math_heavy.cu  36_fast_intrinsics_stress.cu  37_compound_math_chains.cu  38_extended_math.cu  39_graph_api.cu  40_cublas_basic.cu  (+11 more)
wgsl/: compute_basic.wgsl.spv  compute_minimal.wgsl.spv  transitive_vertex.wgsl.spv  vertex_fragment.wgsl.spv
